SEO, sitemap, robots, 404, meta tags

--- a/about.html
+++ b/about.html
@@ -5,8 +5,64 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Primary SEO -->
     <meta name="description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <link rel="canonical" href="https://aidarous-jibril.github.io/haad-cleaning/about.html" />
+    <meta name="robots" content="index,follow">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Haad Cleaning – Om oss">
+    <meta property="og:description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <meta property="og:url" content="https://aidarous-jibril.github.io/haad-cleaning/about.html">
+    <meta property="og:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
+    <meta property="og:locale" content="sv_SE">
+    <meta property="og:site_name" content="Haad Cleaning">
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Haad Cleaning – Om oss">
+    <meta name="twitter:description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <meta name="twitter:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
+
+    <!-- LocalBusiness / CleaningService JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "CleaningService",
+      "name": "Haad Cleaning",
+      "url": "https://aidarous-jibril.github.io/haad-cleaning/",
+      "logo": "https://aidarous-jibril.github.io/haad-cleaning/images/logo.png",
+      "image": "https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg",
+      "description": "Städfirma i Stockholm: hemstäd, kontorsstäd, flyttstäd och storstädning.",
+      "telephone": "+4681234567",
+      "email": "info@haad.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Exempelgatan 12",
+        "postalCode": "111 22",
+        "addressLocality": "Stockholm",
+        "addressCountry": "SE"
+      },
+      "areaServed": "Stockholm",
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
+          "opens": "07:00",
+          "closes": "20:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Saturday","Sunday"],
+          "opens": "09:00",
+          "closes": "18:00"
+        }
+      ]
+    }
+    </script>
+
+    <!-- Fonts & CSS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
