--- a/services.html
+++ b/services.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <title>Haad Cleaning – Tjänster</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Våra städtjänster: hemstädning, flyttstädning, kontorsstädning, storstädning, fönsterputs m.m. Låga timpriser efter RUT.">
+<!-- Primary SEO -->
+<link rel="canonical" href="CANONICAL_URL" />
+<meta name="description" content="PAGE_DESCRIPTION">
+<meta name="robots" content="index,follow">
 
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Open Graph -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="PAGE_TITLE">
+<meta property="og:description" content="PAGE_DESCRIPTION">
+<meta property="og:url" content="CANONICAL_URL">
+<meta property="og:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
+<meta property="og:locale" content="sv_SE">
+<meta property="og:site_name" content="Haad Cleaning">
 
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
+<!-- Twitter -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="PAGE_TITLE">
+<meta name="twitter:description" content="PAGE_DESCRIPTION">
+<meta name="twitter:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
 
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+<!-- LocalBusiness / CleaningService -->
+<script type="application/ld+json">
+{
+  "@context":"https://schema.org",
+  "@type":"CleaningService",
+  "name":"Haad Cleaning",
+  "url":"https://aidarous-jibril.github.io/haad-cleaning/",
+  "logo":"https://aidarous-jibril.github.io/haad-cleaning/images/logo.png",
+  "image":"https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg",
+  "description":"Städfirma i Stockholm: hemstäd, kontorsstäd, flyttstäd och storstädning.",
+  "telephone":"+4681234567",
+  "email":"info@haad.com",
+  "address":{"@type":"PostalAddress","streetAddress":"Exempelgatan 12","postalCode":"111 22","addressLocality":"Stockholm","addressCountry":"SE"},
+  "areaServed":"Stockholm",
+  "openingHoursSpecification":[
+    {"@type":"OpeningHoursSpecification","dayOfWeek":["Monday","Tuesday","Wednesday","Thursday","Friday"],"opens":"07:00","closes":"20:00"},
+    {"@type":"OpeningHoursSpecification","dayOfWeek":["Saturday","Sunday"],"opens":"09:00","closes":"18:00"}
+  ]
+}
+</script>
+
   <body>
   	<div class="wrap">
 			<div class="container">
