--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,33 @@
 <!DOCTYPE html>
 <html lang="sv">
   <!-- Primary SEO -->
-  <link rel="canonical" href="CANONICAL_URL" />
-  <meta name="description" content="PAGE_DESCRIPTION" />
-  <meta name="robots" content="index,follow" />
+ <head>
+    <title>Haad Cleaning – Om oss</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Open Graph -->
-  <meta property="og:type" content="website" />
-  <meta property="og:title" content="PAGE_TITLE" />
-  <meta property="og:description" content="PAGE_DESCRIPTION" />
-  <meta property="og:url" content="CANONICAL_URL" />
-  <meta
-    property="og:image"
-    content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg"
-  />
-  <meta property="og:locale" content="sv_SE" />
-  <meta property="og:site_name" content="Haad Cleaning" />
+    <!-- Primary SEO -->
+    <meta name="description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <link rel="canonical" href="https://aidarous-jibril.github.io/haad-cleaning/about.html" />
+    <meta name="robots" content="index,follow">
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="PAGE_TITLE" />
-  <meta name="twitter:description" content="PAGE_DESCRIPTION" />
-  <meta
-    name="twitter:image"
-    content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg"
-  />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Haad Cleaning – Om oss">
+    <meta property="og:description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <meta property="og:url" content="https://aidarous-jibril.github.io/haad-cleaning/about.html">
+    <meta property="og:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
+    <meta property="og:locale" content="sv_SE">
+    <meta property="og:site_name" content="Haad Cleaning">
 
-  <!-- LocalBusiness / CleaningService -->
-  <script type="application/ld+json">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Haad Cleaning – Om oss">
+    <meta name="twitter:description" content="Lär känna Haad Cleaning – pålitlig städfirma för hem och företag i Stockholm. Miljövänliga produkter, försäkrat och nöjd-kund-garanti.">
+    <meta name="twitter:image" content="https://aidarous-jibril.github.io/haad-cleaning/images/og-cover.jpg">
+
+    <!-- LocalBusiness / CleaningService JSON-LD -->
+    <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "CleaningService",
@@ -49,19 +49,32 @@
       "openingHoursSpecification": [
         {
           "@type": "OpeningHoursSpecification",
-          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday"],
           "opens": "07:00",
           "closes": "20:00"
         },
         {
           "@type": "OpeningHoursSpecification",
-          "dayOfWeek": ["Saturday", "Sunday"],
+          "dayOfWeek": ["Saturday","Sunday"],
           "opens": "09:00",
           "closes": "18:00"
         }
       ]
     }
-  </script>
+    </script>
+
+    <!-- Fonts & CSS -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="css/animate.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="css/magnific-popup.css">
+
+    <link rel="stylesheet" href="css/flaticon.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
   <body>
     <div class="wrap">
       <div class="container">
@@ -178,7 +191,7 @@
                     </div>
                     <div class="text">
                       <p>
-                        <span>Adress:</span> Exempelgatan 12, 111 22 Stockholm
+                        <span>Adress:</span> Kvarnhagsgatan 12, 165 54 Stockholm
                       </p>
                     </div>
                   </div>
