Booking form: inline message + AJAX submit

--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
       "email": "info@haad.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Exempelgatan 12",
-        "postalCode": "111 22",
+        "streetAddress": "Kistagången 20,",
+        "postalCode": "164 40, Kista,",
         "addressLocality": "Stockholm",
         "addressCountry": "SE"
       },
@@ -80,7 +80,7 @@
 				<div class="row justify-content-between">
 					<div class="col-12 col-md d-flex align-items-center">
 						<p class="mb-0 phone">
-              <span class="mailus">Telefon:</span> <a href="tel:079345552">+4679345552</a>
+              <span class="mailus">Telefon:</span> <a href="tel:079345552">+46 79 345 55 52 </a>
               &nbsp;|&nbsp; <span class="mailus">Mejla oss:</span> <a href="mailto:info@haad.com">info@haad.com</a>
             </p>
 					</div>
