--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       "email": "info@haad.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Exempelgatan 12",
-        "postalCode": "111 22",
+        "streetAddress": "Kistagången 20,",
+        "postalCode": "164 40, Kista,",
         "addressLocality": "Stockholm",
         "addressCountry": "SE"
       },
@@ -81,7 +81,7 @@
           <div class="col-12 col-md d-flex align-items-center">
             <p class="mb-0 phone">
               <span class="mailus">Telefon:</span>
-              <a href="tel:081234567">08 1234 567</a> &nbsp;|&nbsp;
+              <a href="tel:+46793455552">+46 79 345 55 52</a> &nbsp;|&nbsp;
               <span class="mailus">Mejla oss:</span>
               <a href="mailto:info@haad.com">info@haad.com</a>
             </p>
@@ -95,22 +95,6 @@
                   aria-label="Facebook"
                   ><span class="fa fa-facebook"
                     ><i class="sr-only">Facebook</i></span
-                  ></a
-                >
-                <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  aria-label="Instagram"
-                  ><span class="fa fa-instagram"
-                    ><i class="sr-only">Instagram</i></span
-                  ></a
-                >
-                <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  aria-label="LinkedIn"
-                  ><span class="fa fa-linkedin"
-                    ><i class="sr-only">LinkedIn</i></span
                   ></a
                 >
               </p>
@@ -345,8 +329,8 @@
                 <div class="desc p-4 bg-secondary">
                   <h3 class="heading">Akutstäd?</h3>
                   <span class="phone"
-                    ><a href="tel:081234567" style="color: #fff"
-                      >08 1234 567</a
+                    ><a href="tel:+46793455552" style="color: #fff"
+                      >+46 79 345 55 52</a
                     ></span
                   >
                 </div>
@@ -1008,7 +992,7 @@
                   ><span class="text">Kistagången 20, 164 40, Kista, Stockholm</span>
                 </li>
                 <li>
-                  <a href="tel:081234567"
+                  <a href="tel:+46793455552"
                     ><span class="icon fa fa-phone"></span
                     ><span class="text">+46 79 345 55 52</span></a
                   >
