--- a/contact.html
+++ b/contact.html
@@ -40,8 +40,8 @@
       "email": "info@haad.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Exempelgatan 12",
-        "postalCode": "111 22",
+        "streetAddress": "Kistagången 20,",
+        "postalCode": "164 40, Kista,",
         "addressLocality": "Stockholm",
         "addressCountry": "SE"
       },
@@ -95,18 +95,6 @@
                   class="d-flex align-items-center justify-content-center"
                   aria-label="Facebook"
                   ><span class="fa fa-facebook"></span
-                ></a>
-                <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  aria-label="Instagram"
-                  ><span class="fa fa-instagram"></span
-                ></a>
-                <a
-                  href="#"
-                  class="d-flex align-items-center justify-content-center"
-                  aria-label="LinkedIn"
-                  ><span class="fa fa-linkedin"></span
                 ></a>
               </p>
             </div>
