--- a/pricing.html
+++ b/pricing.html
@@ -41,8 +41,8 @@
       "email": "info@haad.com",
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Exempelgatan 12",
-        "postalCode": "111 22",
+        "streetAddress": "Kistagången 20,",
+        "postalCode": "164 40, Kista,",
         "addressLocality": "Stockholm",
         "addressCountry": "SE"
       },
@@ -82,7 +82,7 @@
 				<div class="row justify-content-between">
 					<div class="col-12 col-md d-flex align-items-center">
 						<p class="mb-0 phone">
-              <span class="mailus">Telefon:</span> <a href="tel:081234567">08 1234 567</a>
+              <span class="mailus">Telefon:</span> <a href="tel:+46793455552">+46 79 345 55 52</a>
               &nbsp;|&nbsp; <span class="mailus">Mejla oss:</span> <a href="mailto:info@haad.com">info@haad.com</a>
             </p>
 					</div>
@@ -90,8 +90,6 @@
 						<div class="social-media">
 				    		<p class="mb-0 d-flex">
 				    			<a href="#" class="d-flex align-items-center justify-content-center" aria-label="Facebook"><span class="fa fa-facebook"><i class="sr-only">Facebook</i></span></a>
-				    			<a href="#" class="d-flex align-items-center justify-content-center" aria-label="Instagram"><span class="fa fa-instagram"><i class="sr-only">Instagram</i></span></a>
-				    			<a href="#" class="d-flex align-items-center justify-content-center" aria-label="LinkedIn"><span class="fa fa-linkedin"><i class="sr-only">LinkedIn</i></span></a>
 				    		</p>
 			        </div>
 					</div>
@@ -242,7 +240,7 @@
           <!-- ”Latest News” behålls eller ta bort – här låter vi den vara borttagen för att inte länka till blogg -->
 					<div class="col-md-6 col-lg-3 mb-4 mb-md-0">
 						<h2 class="footer-heading">Öppetider</h2>
-            <p>Mån–Fre 07:00–20:00 • Lör–Sön 09:00–18:00<br>Akutstäd? Ring 08 1234 567</p>
+            <p>Mån–Fre 07:00–20:00 • Lör–Sön 09:00–18:00<br>Akutstäd? Ring +46 79 345 55 52</p>
 					</div>
 
 					<div class="col-md-6 col-lg-3 pl-lg-5 mb-4 mb-md-0">
@@ -261,8 +259,8 @@
 						<h2 class="footer-heading">Kontakta oss</h2>
 						<div class="block-23 mb-3">
               <ul>
-                <li><span class="icon fa fa-map-marker"></span><span class="text">Exempelgatan 12, 111 22 Stockholm</span></li>
-                <li><a href="tel:081234567"><span class="icon fa fa-phone"></span><span class="text">08 1234 567</span></a></li>
+                <li><span class="icon fa fa-map-marker"></span><span class="text">Kistagången 20, 164 40, Kista, Stockholm</span></li>
+                <li><a href="tel:+46793455552"><span class="icon fa fa-phone"></span><span class="text">	+46 79 345 55 52</span></a></li>
                 <li><a href="mailto:info@haad.com"><span class="icon fa fa-paper-plane"></span><span class="text">info@haad.com</span></a></li>
               </ul>
             </div>
